feat(child need): create API endpoints
