# model/dtos/response/child_need.go
@@ -11,6 +11,9 @@ type MealNeedResponse struct {
 	Durations            []WrapDuration      `json:"durations"`
 	TotalSupportedMonths int                 `json:"total_supported_months"`
 	SupportedYears       []WrapSupportedYear `json:"supported_years"`
+	ProvideMealDates     []string            `json:"provide_meal_dates"`
+	ProvideMealPeriods   []time.Time         `json:"provide_meal_periods"`
+	ProvideMealStaffs    []string            `json:"provide_meal_staffs"`
 	WithdrawProposals    []string            `json:"withdraw_proposals"`
 	WithdrawsForNeed     []string            `json:"withdraws_for_need"`
 }
@@ -23,4 +26,29 @@ type WrapDuration struct {
 type WrapSupportedYear struct {
 	Year            int `json:"year"`
 	SupportedMonths int `json:"supported_months"`
+}
+
+type BooksNeedResponse struct {
+	ID                string   `json:"id"`
+	Year              int      `json:"year"`
+	YearChanges       []int    `json:"year_changes"`
+	Semster           int      `json:"semester"`
+	Value             int64    `json:"value"`
+	SupportedYears    []int    `json:"supported_years"`
+	Donors            []string `json:"donors"`
+	Donations         []string `json:"donations"`
+	WithdrawProposals []string `json:"withdraw_proposals"`
+	WithdrawsForNeed  []string `json:"withdraws_for_need"`
+}
+
+type HealthInsuranceNeedResponse struct {
+	ID                string   `json:"id"`
+	Year              int      `json:"year"`
+	YearChanges       []int    `json:"year_changes"`
+	Value             int64    `json:"value"`
+	SupportedYears    []int    `json:"supported_years"`
+	Donors            []string `json:"donors"`
+	Donations         []string `json:"donations"`
+	WithdrawProposals []string `json:"withdraw_proposals"`
+	WithdrawsForNeed  []string `json:"withdraws_for_need"`
 }
