# model/dtos/response/profile.go
@@ -12,12 +12,13 @@ type PersonalProfileResponse struct {
 }
 
 type PersonalWalletProfileResponse struct {
-	WalletAddress string                `json:"wallet_address"`
-	FirstName     string                `json:"first_name"`
-	LastName      string                `json:"last_name"`
-	TotalDonation int64                 `json:"total_donation"`
-	TxRecords     []TransactionResponse `json:"transaction_records"`
-	RecordAmount  int                   `json:"record_amount"`
-	Page          int                   `json:"page"`
-	TotalPages    int                   `json:"total_pages"`
+	WalletAddress   string                `json:"wallet_address"`
+	FirstName       string                `json:"first_name"`
+	LastName        string                `json:"last_name"`
+	TotalDonation   int64                 `json:"total_donation"`
+	SupportedChilds []string              `json:"supported_childs"`
+	TxRecords       []TransactionResponse `json:"transaction_records"`
+	RecordAmount    int                   `json:"record_amount"`
+	Page            int                   `json:"page"`
+	TotalPages      int                   `json:"total_pages"`
 }
